update the packages

--- a/src/Sass/Helpers/_Variables.scss
+++ b/src/Sass/Helpers/_Variables.scss
@@ -1,4 +1,4 @@
-$main-color: #fc4c4c;
+$main-color: #cb2f2f;
 $main-hover-color: #fa3734;
 $secondray-color: #303443;
 $darker-secondray-color: #1e2332;
